# hpyer

./: .gitignore  Cargo.toml  README.md  bench.py  bench.sh  build.sh  pyproject.toml  test.py
.cargo/: config
src/: asyncio.rs  client.rs  error.rs  lib.rs  types.rs
src/orjson/: ffi.rs  mod.rs  opt.rs  typeref.rs  unicode.rs  util.rs
src/orjson/deserialize/: cache.rs  deserializer.rs  mod.rs
src/orjson/serialize/: dataclass.rs  datetime.rs  default.rs  dict.rs  int.rs  list.rs  mod.rs  numpy.rs  serializer.rs  str.rs  tuple.rs  uuid.rs
