[package]
name = "hpyer"
version = "0.1.0"
authors = ["Jens Reidel <adrian@travitia.xyz>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Gelbpunkt/hpyer"
homepage = "https://github.com/Gelbpunkt/hpyer"
readme = "README.md"
keywords = ["async", "http", "asyncio"]
include = ["Cargo.toml", "README.md", "src/*"]

[lib]
name = "hpyer"
crate-type = ["cdylib"]

[package.metadata.maturin]
requires-python = ">=3.8"
classifier = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Typing :: Typed",
]

[dependencies]
associative-cache = "1"
bytecount = { version = "0.6", default_features = false, features = [
    "generic-simd",
    "runtime-dispatch-simd"
] }
http = "0.2"
itoa = { version = "0.4", default_features = false }
once_cell = "1.7"
pyo3 = { git = "https://github.com/PyO3/pyo3", default-features = false, features = [
    "macros",
    "extension-module",
    "nightly"
] }
reqwest = { git = "https://github.com/seanmonstar/reqwest", default-features = false, features = [
    "rustls-tls",
    "multipart"
] }
serde = "1.0"
serde_json = { path = "./json", default_features = false, features = ["std"] }
smallvec = { version = "1.6", default_features = false, features = ["const_generics", "union", "specialization", "write"] }
tokio = { version = "1.1", default-features = false, features = [
    "rt-multi-thread"
] }
wyhash = "0.5"
# And some SIMD patches
encoding_rs = { version = "0.8", features = ["simd-accel"] }

[patch.crates-io]
hyper = { git = "https://github.com/hyperium/hyper", default-features = false, features = [
    "client",
    "tcp",
    "http1",
    "http2"
] }
hyper-rustls = { git = "https://github.com/ctz/hyper-rustls" }

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"
