[package]
name = "hpyer"
version = "0.1.0"
authors = ["Jens Reidel <adrian@travitia.xyz>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Gelbpunkt/hpyer"
homepage = "https://github.com/Gelbpunkt/hpyer"
readme = "README.md"
keywords = ["async", "http", "asyncio"]
include = ["Cargo.toml", "README.md", "src/*"]

[lib]
name = "hpyer"
crate-type = ["cdylib"]

[package.metadata.maturin]
requires-python = ">=3.8"
classifier = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Typing :: Typed",
]

[dependencies]
http = "0.2"
once_cell = "1.8"
pyo3 = { git = "https://github.com/PyO3/pyo3", default-features = false, features = [
    "macros",
    "extension-module",
    "nightly"
] }
reqwest = { git = "https://github.com/seanmonstar/reqwest", default-features = false, features = [
    "rustls-tls",
    "multipart",
    "trust-dns",
    "gzip",
    "brotli",
    "deflate"
] }
tokio = { version = "1.1", default-features = false, features = [
    "rt-multi-thread"
] }
orjson = { git = "https://github.com/Gelbpunkt/orjson.git", default-features = false, features = ["unstable-simd"] }

[patch.crates-io]
hyper = { git = "https://github.com/hyperium/hyper" }
hyper-rustls = { git = "https://github.com/ctz/hyper-rustls" }

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"
